--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li class="list">
               <a href="" class="link"><i class="ri-twitter-fill icon"></i></a>
             </li>
-            <li class="list" class="link">
+            <li class="list">
               <a href="" class="link"><i class="ri-github-fill icon"></i></a>
             </li>
           </ul>
@@ -67,7 +67,7 @@
       </section>
       <section class="projet">
         <div class="side_projet">
-          <p class="side_title">Listes des projets réalisaient</p>
+          <h4 class="side_title">Listes des projets réalisaient</h4>
           <div class="card">
             <div class="item">
               <a href="https://arobase-rdc.com/" class="link_project"
