--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style/Style.css" />
+    <link rel="stylesheet" href="./assets/style/Style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style/responsive.css" />
+    <link rel="stylesheet" href="./assets/style/responsive.css" />
   </head>
   <body>
     <header class="header">
