add work section

--- a/index.html
+++ b/index.html
@@ -69,27 +69,79 @@
         <div class="side_projet">
           <h4 class="side_title">Listes des projets réalisaient</h4>
           <div class="card">
-            <div class="item">
-              <a href="https://arobase-rdc.com/" class="link_project"
-                ><span class="title_item">Arobase site web</span></a
-              >
-              <p class="desc">
-                Arobase c'est une entreprise commerciale qui vend des
-                ordinnateurs et auutres
-              </p>
+            <div class="container_card">
+              <div class="container_card-img">
+                <img src="img/ar.PNG" alt="logo arobase" class="card_img" />
+              </div>
+              <div class="item">
+                <a
+                  href="https://arobase-rdc.com/"
+                  class="link_project"
+                  target="_blank"
+                  ><span class="title_item">Arobase site web</span></a
+                >
+                <p class="desc">
+                  Arobase c'est une entreprise commerciale qui vend des
+                  ordinateurs et autres
+                </p>
+              </div>
             </div>
-            <div class="item">
-              <a href="https://expertise-it.net/" class="link_project"></a
-              ><span class="title_item">Expertise service site web</span>
-              <p class="desc">
-                Expertise service c'est une entreprise d'integration de solution
-                informatique
-              </p>
+            <div class="container_card">
+              <div class="container_card-img">
+                <img
+                  src="img/expertise.PNG"
+                  alt="logo arobase"
+                  class="card_img"
+                />
+              </div>
+              <div class="item">
+                <a
+                  href="https://expertise-it.net/"
+                  class="link_project"
+                  target="_blank"
+                  ><span class="title_item">Expertise service site web</span></a
+                >
+                <p class="desc">
+                  Expertise service c'est une entreprise d'integration de
+                  solution informatique
+                </p>
+              </div>
             </div>
           </div>
         </div>
         <div class="last_projet">
-          <div class="work">work</div>
+          <div class="work">
+            <span class="title_item">Experiences</span>
+            <div class="work-item">
+              <div class="logo_work">
+                <img src="img/burotop.png" alt="logo" class="logo_work-img" />
+              </div>
+              <div class="desc_work">
+                <div class="desc_work-exp">
+                  <span class="title_item">Burotop IRIS</span>
+                  <p class="desc">Webmaster</p>
+                </div>
+                <div class="desc_work-date">
+                  <span>2013-2018</span>
+                </div>
+              </div>
+            </div>
+            <div class="work-item">
+              <div class="logo_work">
+                <img src="img/images.png" alt="logo" class="logo_work-img" />
+              </div>
+              <div class="desc_work">
+                <div class="desc_work-exp">
+                  <span class="title_item">Arobase </span>
+                  <span class="mission">Mission</span>
+                  <p class="desc">Software Developer</p>
+                </div>
+                <div class="desc_work-date">
+                  <span>2019-2020</span>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="contact">contact-me</div>
         </div>
       </section>
